--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,11 @@
 theme: jekyll-theme-minimal
 
-title: Fall 2017
-name: IDIA 640
+title: IDIA 640 Fall 2017
+name: Humans, Computers, and Cognition
 github_repository_name: idia640
 github_repository_url: https://github.com/idia640/idia640.github.io
 github_owner: Lisa D. Harper
 github_owner_url: https://github.com/idia640
-# github_zip_url:
-# paginate:
-# show_downloads:
 
 defaults:
   - scope:
