Updated site for 2017

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,9 @@ permalink: pretty
 gems:
 - jemoji
 - jekyll-paginate
+- jekyll-feed
+
+ # This will require each of these plugins automatically.
 
 # Kramdown options
 # https://kramdown.gettalong.org/rdoc/Kramdown/Options.html
