--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ gems:
 - jemoji
 - jekyll-paginate
 - jekyll-feed
+- jekyll-twitter-plugin
 
  # This will require each of these plugins automatically.
 
