--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 
-title: IDIA 640 Fall 2018
+title: IDIA 640 Spring 2020
 name: Humans, Computers, and Cognition
 github_repository_name: idia640
 github_repository_url: https://github.com/idia640/idia640.github.io
